--- a/dd-java-agent/agent-tooling/agent-tooling.gradle
+++ b/dd-java-agent/agent-tooling/agent-tooling.gradle
@@ -12,6 +12,10 @@ dependencies {
   compile group: 'com.blogspot.mydailyjava', name: 'weak-lock-free', version: '0.13'
   compile deps.bytebuddy
   compile deps.bytebuddyagent
+
+  compile group: 'io.jaegertracing', name: 'jaeger-core', version: '0.32.0'
+  compile group: 'io.jaegertracing', name: 'jaeger-thrift', version: '0.32.0'
+
   annotationProcessor deps.autoservice
   implementation deps.autoservice
 
