--- a/dd-java-agent/testing/testing.gradle
+++ b/dd-java-agent/testing/testing.gradle
@@ -1,3 +1,4 @@
+// Modified by SignalFx
 apply from: "${rootDir}/gradle/java.gradle"
 
 minimumBranchCoverage = 0.5
@@ -21,6 +22,8 @@ dependencies {
   compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '8.0.0.v20110901'
 
   compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.11.0'
+
+  compile group: 'io.opentracing', name: 'opentracing-mock', version: '0.31.0'
 
   compile project(':dd-trace-ot')
   compile project(':dd-java-agent:agent-tooling')
