--- a/dd-java-agent/instrumentation/mongo-3.1/mongo-3.1.gradle
+++ b/dd-java-agent/instrumentation/mongo-3.1/mongo-3.1.gradle
@@ -1,3 +1,4 @@
+// Modified by SignalFx
 muzzle {
   pass {
     group = "org.mongodb"
@@ -20,6 +21,7 @@ testSets {
 dependencies {
   compileOnly group: 'org.mongodb', name: 'mongo-java-driver', version: '3.1.0'
 
+  compile project(':dd-trace-api')
   compile project(':dd-java-agent:agent-tooling')
 
   compile deps.bytebuddy
@@ -28,6 +30,7 @@ dependencies {
   implementation deps.autoservice
 
   testCompile project(':dd-trace-ot')
+  testCompile project(':dd-java-agent:testing')
   testCompile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.1.0'
 }
 
