Initial SignalFx-distribution logic
Using the new Gradle publishing config and sending the JARs to Sonatype's OSSRH repository

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: ~/dd-trace-java
+  working_directory: ~/signalfx-trace-java
   resource_class: xlarge
   docker:
   - image: &default_container datadog/dd-trace-java-docker-build:latest
@@ -9,9 +9,9 @@ defaults: &defaults
 cache_keys: &cache_keys
   # Reset the cache approx every release
   keys:
-  - dd-trace-java-{{ checksum "dd-trace-java.gradle" }}-{{ .Branch }}-{{ .Revision }}
-  - dd-trace-java-{{ checksum "dd-trace-java.gradle" }}-{{ .Branch }}
-  - dd-trace-java-{{ checksum "dd-trace-java.gradle" }}
+  - signalfx-trace-java-{{ checksum "signalfx-trace-java.gradle" }}-{{ .Branch }}-{{ .Revision }}
+  - signalfx-trace-java-{{ checksum "signalfx-trace-java.gradle" }}-{{ .Branch }}
+  - signalfx-trace-java-{{ checksum "signalfx-trace-java.gradle" }}
 
 jobs:
   build:
@@ -41,7 +41,7 @@ jobs:
         - workspace
 
     - save_cache:
-        key: dd-trace-java-{{ checksum "dd-trace-java.gradle" }}-{{ .Branch }}-{{ .Revision }}
+        key: signalfx-trace-java-{{ checksum "signalfx-trace-java.gradle" }}-{{ .Branch }}-{{ .Revision }}
         paths: ~/.gradle
 
 
@@ -142,14 +142,14 @@ jobs:
     - restore_cache:
         # Reset the cache approx every release
         keys:
-        - dd-trace-java-version-scan-{{ checksum "dd-trace-java.gradle" }}
+        - signalfx-trace-java-version-scan-{{ checksum "signalfx-trace-java.gradle" }}
 
     - run:
         name: Verify Version Scan
         command: GRADLE_OPTS="-Dorg.gradle.jvmargs=-Xmx4G -Xms64M" ./gradlew verifyVersionScan --parallel --stacktrace --no-daemon --max-workers=1
 
     - save_cache:
-        key: dd-trace-java-version-scan-{{ checksum "dd-trace-java.gradle" }}
+        key: signalfx-trace-java-version-scan-{{ checksum "signalfx-trace-java.gradle" }}
         paths: ~/.gradle
 
   muzzle:
@@ -160,7 +160,7 @@ jobs:
     - restore_cache:
         # Reset the cache approx every release
         keys:
-        - dd-trace-java-muzzle-{{ checksum "dd-trace-java.gradle" }}
+        - signalfx-trace-java-version-scan-{{ checksum "signalfx-trace-java.gradle" }}
 
     - run:
         name: Verify Muzzle
@@ -170,7 +170,7 @@ jobs:
         command: GRADLE_OPTS="-Dorg.gradle.jvmargs=-Xmx12G -Xms64M" ./gradlew muzzle --parallel --stacktrace --no-daemon
 
     - save_cache:
-        key: dd-trace-java-muzzle-{{ checksum "dd-trace-java.gradle" }}
+        key: signalfx-trace-java-version-scan-{{ checksum "signalfx-trace-java.gradle" }}
         paths: ~/.gradle
 
   publish: &publish
