--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -16,9 +16,8 @@
 
 // Source: https://github.com/ratpack/ratpack/blob/master/gradle/publish.gradle
 
-apply plugin: "maven"
-apply plugin: "com.jfrog.artifactory"
-apply plugin: 'com.jfrog.bintray'
+apply plugin: "maven-publish"
+apply plugin: "signing"
 
 afterEvaluate {
   assert description: "Project $project.path is published, must have a description"
@@ -33,117 +32,64 @@ tasks.withType(Upload).matching { it.name != "install" }.all {
 def isRoot = project.rootProject == project
 if (!isRoot) {
   apply from: "$rootDir/gradle/version.gradle"
-  apply from: "${rootDir}/gradle/pom.gradle"
 
-  configurations {
-    configurations {
-      all {
-        incoming.afterResolve {
-          dependencies.withType(ModuleDependency) { dep ->
-            excludeRules.each {
-              if ([it.group, it.module].any { it == null }) {
-                throw new InvalidUserDataException(
-                  "Partial exclude for dependency '$dep.group:$dep.name:$dep.version' of $project: [group: $it.group, module: $it.module]\n\nExcludes must specify both group and module and neither can be '*'."
-                )
-              }
+  def isCI = Boolean.parseBoolean("$System.env.CI")
+
+  publishing {
+    publications {
+      mavenJava(MavenPublication) {
+        from components.java
+        pom {
+          name = project.name
+          description = project.description
+          url = "https://github.com/signalfx/signalfx-trace-java"
+          licenses {
+            license {
+              name = "The Apache Software License, Version 2.0"
+              url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+              distribution = "repo"
+            }
+          }
+          scm {
+            connection = "scm:https://git@github.com/signalfx/signalfx-trace-java"
+            developerConnection = "scm:git@github.com:signalfx/signalfx-trace-java.git"
+            url = "https://github.com/signalfx/signalfx-trace-java"
+          }
+          developers {
+            developer {
+              id = "signalfx"
+              name = "SignalFx"
+            }
+            developer {
+              id = "datadog"
+              name = "Datadog"
             }
           }
         }
       }
     }
-  }
-}
 
-def isSnapshot = version.endsWith("-SNAPSHOT")
-def isCIandTagged = System.getenv("CIRCLE_TAG") != null
-// define in ~/.gradle/gradle.properties to override for testing
-def forceLocal = project.hasProperty('forceLocal') && forceLocal
+    repositories {
+      maven {
+        name = 'ossrh'
+        def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+        def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+        url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
 
-artifactoryPublish { task ->
-  gradle.taskGraph.whenReady { taskGraph ->
-    def startParameter = project.gradle.startParameter
-    if (taskGraph.hasTask(task) && startParameter.parallelProjectExecutionEnabled && startParameter.maxWorkerCount > 1) {
-      throw new IllegalStateException("cannot run " + task + " with --parallel and --max-workers > 1")
-    }
-  }
-}
+        def username = project.findProperty("ossrhUsername") ?: null
+        def password = project.findProperty("ossrhPassword") ?: null
 
-artifactory {
-  gradle.taskGraph.whenReady { taskGraph ->
-    if (taskGraph.hasTask(artifactoryPublish)) {
-      assert !project.hasProperty("removeJarVersionNumbers") || !removeJarVersionNumbers
-      // trigger error if missing
-      bintrayUser
-      bintrayApiKey
-    }
-  }
-
-  publish {
-    contextUrl = forceLocal ? 'http://localhost:8080/artifactory' : 'https://oss.jfrog.org'
-    repository {
-      if (forceLocal)
-        repoKey = isSnapshot ? 'libs-snapshot-local' : 'libs-release-local'
-      else
-        repoKey = isSnapshot ? 'oss-snapshot-local' : 'oss-release-local'
-
-      if (project.hasProperty("bintrayUser") && project.hasProperty("bintrayApiKey")) {
-        username = bintrayUser
-        password = bintrayApiKey
+        credentials {
+          username = username
+          password = password
+        }
       }
     }
-    defaults {
-      if (!isRoot) publishConfigs('archives')
-      publishIvy = false   // This isn't supported by bintray anyway.
-    }
+  }
+
+  signing {
+    required = isCI
+    sign publishing.publications.mavenJava
   }
 }
 
-bintrayUpload { task ->
-  gradle.taskGraph.whenReady { taskGraph ->
-    def startParameter = project.gradle.startParameter
-    if (taskGraph.hasTask(task) && startParameter.parallelProjectExecutionEnabled && startParameter.maxWorkerCount > 1) {
-      throw new IllegalStateException("cannot run " + task + " with --parallel and --max-workers > 1")
-    }
-  }
-}
-
-bintray {
-  gradle.taskGraph.whenReady { taskGraph ->
-    if (taskGraph.hasTask(bintrayUpload)) {
-      assert !project.hasProperty("removeJarVersionNumbers") || !removeJarVersionNumbers
-      // trigger error if missing
-      bintrayUser
-      bintrayApiKey
-    }
-  }
-
-  if (project.hasProperty("bintrayUser") && project.hasProperty("bintrayApiKey")) {
-    user = bintrayUser
-    key = bintrayApiKey
-  }
-
-  if (!isRoot) configurations = ['archives']
-
-//  dryRun = true //[Default: false] Whether to run this as dry-run, without deploying
-  publish = true //[Default: false] Whether version should be auto published after an upload
-//  override = true //[Default: false] Whether to override version artifacts already published
-
-  //Package configuration. The plugin will use the repo and name properties to check if the package already exists. In that case, there's no need to configure the other package properties (like userOrg, desc, etc).
-  pkg {
-    repo = 'datadog-maven'
-    name = 'dd-trace-java'
-    userOrg = 'datadog' //An optional organization name when the repo belongs to one of the user's orgs
-    desc = 'Client libraries for Datadog APM'
-    websiteUrl = 'https://github.com/datadog/dd-trace-java'
-    issueTrackerUrl = 'https://github.com/datadog/dd-trace-java/issues'
-    vcsUrl = 'https://github.com/datadog/dd-trace-java.git'
-    licenses = ['Apache-2.0']
-
-    githubRepo = 'datadog/dd-trace-java' //Optional Github repository
-    githubReleaseNotesFile = 'README.md' //Optional Github readme file
-  }
-}
-
-if (!isSnapshot && isCIandTagged) {
-  artifactoryPublish.finalizedBy bintrayUpload
-}
