Fix up spring-web and related tests
Pulling out some common logic for creating span names from a url

--- a/dd-java-agent/instrumentation/netty-4.1/netty-4.1.gradle
+++ b/dd-java-agent/instrumentation/netty-4.1/netty-4.1.gradle
@@ -31,6 +31,7 @@ testSets {
 dependencies {
   compileOnly group: 'io.netty', name: 'netty-codec-http', version: '4.1.0.Final'
 
+  compile project(':dd-trace-ot')
   compile project(':dd-java-agent:agent-tooling')
 
   compile deps.bytebuddy
