--- a/dd-java-agent/instrumentation/rabbitmq-amqp-2.7/rabbitmq-amqp-2.7.gradle
+++ b/dd-java-agent/instrumentation/rabbitmq-amqp-2.7/rabbitmq-amqp-2.7.gradle
@@ -1,3 +1,4 @@
+// Modified by SignalFx
 muzzle {
   pass {
     group = "com.rabbitmq"
@@ -37,7 +38,7 @@ dependencies {
   testCompile deps.testcontainers
 
   latestDepTestCompile group: 'com.rabbitmq', name: 'amqp-client', version: '+'
-  latestDepTestCompile group: 'org.springframework.amqp', name: 'spring-rabbit', version: '+'
+  latestDepTestCompile group: 'org.springframework.amqp', name: 'spring-rabbit', version: '2.0.9.RELEASE'
 }
 
 configurations.testRuntime {
