--- a/dd-java-agent/instrumentation/jax-rs-client/jax-rs-client.gradle
+++ b/dd-java-agent/instrumentation/jax-rs-client/jax-rs-client.gradle
@@ -33,8 +33,8 @@ dependencies {
   annotationProcessor deps.autoservice
   implementation deps.autoservice
 
-  compile project(':dd-trace-ot')
   compile project(':dd-java-agent:agent-tooling')
+  compile project(':dd-java-agent:instrumentation:utils')
 
   testCompile project(':dd-java-agent:testing')
 
