--- a/dd-java-agent/instrumentation/netty-4.1/netty-4.1.gradle
+++ b/dd-java-agent/instrumentation/netty-4.1/netty-4.1.gradle
@@ -1,3 +1,4 @@
+// Modified by SignalFx
 // Set properties before any plugins get loaded
 ext {
   minJavaVersionForTests = JavaVersion.VERSION_1_8
@@ -31,8 +32,8 @@ testSets {
 dependencies {
   compileOnly group: 'io.netty', name: 'netty-codec-http', version: '4.1.0.Final'
 
-  compile project(':dd-trace-ot')
   compile project(':dd-java-agent:agent-tooling')
+  compile project(':dd-java-agent:instrumentation:utils')
 
   compile deps.bytebuddy
   compile deps.opentracing
