--- a/dd-java-agent/testing/testing.gradle
+++ b/dd-java-agent/testing/testing.gradle
@@ -18,6 +18,7 @@ dependencies {
   compile deps.spock
   compile deps.testLogging
   compile deps.guava
+  compile deps.jaeger
 
   compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '8.0.0.v20110901'
 
@@ -35,4 +36,14 @@ dependencies {
 
   // test instrumenting java 1.1 bytecode
   testCompile group: 'net.sf.jt400', name: 'jt400', version: '6.1'
+}
+
+tasks.withType(Test) {
+  environment "JAEGER_SERVICE_NAME", "Java-Agent-Testing"
+  environment "JAEGER_SAMPLER_TYPE", "const"
+  environment "JAEGER_SAMPLER_PARAM", "1.0"
+  environment "JAEGER_ENDPOINT", "https://ingest.signalfx.com/v1/trace"
+  environment "JAEGER_USER", "auth"
+  environment "JAEGER_PASSWORD", ""
+  environment "JAEGER_REPORTER_FLUSH_INTERVAL", "1000"
 }
