--- a/dd-trace-ot/dd-trace-ot.gradle
+++ b/dd-trace-ot/dd-trace-ot.gradle
@@ -31,6 +31,7 @@ dependencies {
   compile project(':dd-trace-api')
   compile deps.opentracing
   compile deps.opentracingMock
+  compile deps.jaeger
   compile group: 'io.opentracing.contrib', name: 'opentracing-tracerresolver', version: '0.1.0'
 
   compile deps.jackson
