--- a/signalfx-trace-java.gradle
+++ b/signalfx-trace-java.gradle
@@ -1,8 +1,6 @@
 plugins {
   id 'io.franzbecker.gradle-lombok' version '1.14'
-  id 'com.jfrog.artifactory' version '4.8.1'
-  id 'com.jfrog.bintray' version '1.8.4'
-  id 'net.ltgt.errorprone' version '0.0.14' // FIXME: this is really old!
+  id 'net.ltgt.errorprone' version '0.0.14'
   id 'org.unbroken-dome.test-sets' version '1.5.2'
 
   id 'com.gradle.build-scan' version '1.16' // 2.0+ requires gradle 5
@@ -15,8 +13,8 @@ plugins {
 def isCI = System.getenv("CI") != null
 
 allprojects {
-  group = 'com.datadoghq'
-  version = '0.20.0'
+  group = 'com.signalfx.public'
+  version = '0.20.0-sfx0-SNAPSHOT'
 
   if (isCI) {
     buildDir = "${rootDir}/workspace/${projectDir.path.replace(rootDir.path, '')}/build/"
@@ -26,11 +24,10 @@ allprojects {
 }
 
 repositories {
-  jcenter()
   mavenCentral()
 }
 
-description = 'dd-trace-java'
+description = 'signalfx-trace-java'
 
 task traceAgentTest {}
 task latestDepTest {}
