--- a/dd-java-agent/agent-bootstrap/agent-bootstrap.gradle
+++ b/dd-java-agent/agent-bootstrap/agent-bootstrap.gradle
@@ -1,4 +1,3 @@
-// Modified by SignalFx
 // The shadowJar of this project will be injected into the JVM's bootstrap classloader
 plugins {
   id "com.github.johnrengelman.shadow"
@@ -9,10 +8,11 @@ apply from: "${rootDir}/gradle/java.gradle"
 excludedClassesConverage += ['datadog.trace.bootstrap.*']
 
 dependencies {
-  compile deps.slf4j
-  compile group: 'org.slf4j', name: 'slf4j-simple', version: versions.slf4j
   compile project(':dd-trace-api')
   compile deps.opentracing
+  compile deps.slf4j
+  compile group: 'org.slf4j', name: 'slf4j-simple', version: versions.slf4j
+  // ^ Generally a bad idea for libraries, but we're shadowing.
 }
 
 jar {
