--- a/dd-java-agent/instrumentation/instrumentation.gradle
+++ b/dd-java-agent/instrumentation/instrumentation.gradle
@@ -10,27 +10,26 @@ plugins {
 }
 apply from: "${rootDir}/gradle/java.gradle"
 
+
 Project instr_project = project
 subprojects { subProj ->
-  if (subProj.name != 'utils') {
-    apply plugin: "net.bytebuddy.byte-buddy"
-    apply plugin: 'muzzle'
+  apply plugin: "net.bytebuddy.byte-buddy"
+  apply plugin: 'muzzle'
 
+  subProj.byteBuddy {
+    transformation {
+      // Applying NoOp optimizes build by applying bytebuddy plugin to only compileJava task
+      tasks = ['compileJava', 'compileScala']
+      plugin = 'datadog.trace.agent.tooling.muzzle.MuzzleGradlePlugin\$NoOp'
+    }
+  }
+
+  subProj.afterEvaluate {
     subProj.byteBuddy {
       transformation {
-        // Applying NoOp optimizes build by applying bytebuddy plugin to only compileJava task
         tasks = ['compileJava', 'compileScala']
-        plugin = 'datadog.trace.agent.tooling.muzzle.MuzzleGradlePlugin$NoOp'
-      }
-    }
-
-    subProj.afterEvaluate {
-      subProj.byteBuddy {
-        transformation {
-          tasks = ['compileJava', 'compileScala']
-          plugin = 'datadog.trace.agent.tooling.muzzle.MuzzleGradlePlugin'
-          classPath = project(':dd-java-agent:agent-tooling').configurations.instrumentationMuzzle + subProj.configurations.compile + subProj.sourceSets.main.output
-        }
+        plugin = 'datadog.trace.agent.tooling.muzzle.MuzzleGradlePlugin'
+        classPath = project(':dd-java-agent:agent-tooling').configurations.instrumentationMuzzle + subProj.configurations.compile + subProj.sourceSets.main.output
       }
     }
   }
@@ -54,17 +53,12 @@ configurations {
   runtime.exclude module: deps.slf4j
   runtime.exclude group: 'org.slf4j'
   runtime.exclude group: 'io.opentracing'
-  runtime.exclude group: 'io.jaegertracing'
 }
 
 shadowJar {
   dependencies {
     exclude(project(':dd-java-agent:agent-bootstrap'))
-    exclude(project(':dd-java-agent:agent-tooling'))
     exclude(project(':dd-trace-api'))
-    exclude(dependency([group: 'io.opentracing', name: 'opentracing-api']))
-    exclude(dependency([group: 'io.opentracing', name: 'opentracing-noop']))
-    exclude(dependency([group: 'io.opentracing', name: 'opentracing-util']))
   }
 }
 
