--- a/dd-java-agent/instrumentation/netty-4.0/netty-4.0.gradle
+++ b/dd-java-agent/instrumentation/netty-4.0/netty-4.0.gradle
@@ -33,8 +33,8 @@ testSets {
 dependencies {
   compileOnly group: 'io.netty', name: 'netty-codec-http', version: '4.0.0.Final'
 
+  compile project(':dd-trace-ot')
   compile project(':dd-java-agent:agent-tooling')
-  compile project(':dd-java-agent:instrumentation:utils')
 
   compile deps.bytebuddy
   compile deps.opentracing
