--- a/dd-java-agent/instrumentation/okhttp-3/okhttp-3.gradle
+++ b/dd-java-agent/instrumentation/okhttp-3/okhttp-3.gradle
@@ -22,7 +22,7 @@ dependencies {
   compileOnly group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.0.0'
 
   compile project(':dd-java-agent:agent-tooling')
-  compile project(':dd-java-agent:instrumentation:utils')
+  compile project(':dd-trace-ot')
 
   compile deps.bytebuddy
   compile deps.opentracing
