--- a/dd-java-agent/instrumentation/servlet-2/servlet-2.gradle
+++ b/dd-java-agent/instrumentation/servlet-2/servlet-2.gradle
@@ -16,7 +16,7 @@ dependencies {
   compileOnly group: 'javax.servlet', name: 'servlet-api', version: '2.3'
 
   compile project(':dd-java-agent:agent-tooling')
-  compile project(':dd-java-agent:instrumentation:utils')
+  compile project(':dd-trace-ot')
 
   compile deps.bytebuddy
   compile deps.opentracing
