--- a/dd-trace-ot/dd-trace-ot.gradle
+++ b/dd-trace-ot/dd-trace-ot.gradle
@@ -14,6 +14,7 @@ excludedClassesConverage += [
   'datadog.trace.common.writer.LoggingWriter',
   'datadog.trace.common.sampling.PrioritySampling',
   'datadog.trace.common.util.Clock',
+  'datadog.trace.common.util.URLUtil',
   'datadog.opentracing.mock.*',
   'datadog.opentracing.propagation.TagContext'
 ]
