--- a/dd-java-agent/testing/testing.gradle
+++ b/dd-java-agent/testing/testing.gradle
@@ -6,6 +6,7 @@ minimumInstructionCoverage = 0.5
 excludedClassesConverage += [
   'datadog.trace.agent.test.asserts.*Assert',
   'datadog.trace.agent.test.AgentTestRunner.ErrorCountingListener',
+  'datadog.trace.agent.test.AgentTestRunner.TestRunnerListener.AbortTransformationException',
   'datadog.trace.agent.test.OkHttpUtils',
   'datadog.trace.agent.test.TestUtils',
   // Avoid applying jacoco instrumentation to classes instrumented by tested agent
