--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -91,7 +91,8 @@ if (!isRoot) {
   }
 
   signing {
-    required = isCI
+    required = !version.endsWith('SNAPSHOT')
+    useGpgCmd()
     sign publishing.publications.mavenJava
   }
 }
