Add ZipkinV2 output and B3 propagation to DDTracer
This was done a fairly uninvasive manner to allow future merges from
upstream to be done more easily.

--- a/dd-trace-ot/dd-trace-ot.gradle
+++ b/dd-trace-ot/dd-trace-ot.gradle
@@ -12,7 +12,8 @@ minimumInstructionCoverage = 0.6
 excludedClassesConverage += [
   'datadog.trace.common.writer.ListWriter',
   'datadog.trace.common.writer.LoggingWriter',
-  'datadog.trace.common.sampling.PrioritySampling'
+  'datadog.trace.common.sampling.PrioritySampling',
+  'datadog.trace.common.sampling.Sampler.Builder'
 ]
 
 apply plugin: 'org.unbroken-dome.test-sets'
