--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: ~/signalfx-trace-java
+  working_directory: ~/signalfx-tracing-java
   resource_class: xlarge
   docker:
   - image: &default_container datadog/dd-trace-java-docker-build:latest
@@ -9,9 +9,9 @@ defaults: &defaults
 cache_keys: &cache_keys
   # Reset the cache approx every release
   keys:
-  - signalfx-trace-java-{{ checksum "signalfx-trace-java.gradle" }}-{{ .Branch }}-{{ .Revision }}
-  - signalfx-trace-java-{{ checksum "signalfx-trace-java.gradle" }}-{{ .Branch }}
-  - signalfx-trace-java-{{ checksum "signalfx-trace-java.gradle" }}
+  - signalfx-tracing-java-{{ checksum "signalfx-tracing-java.gradle" }}-{{ .Branch }}-{{ .Revision }}
+  - signalfx-tracing-java-{{ checksum "signalfx-tracing-java.gradle" }}-{{ .Branch }}
+  - signalfx-tracing-java-{{ checksum "signalfx-tracing-java.gradle" }}
 
 jobs:
   build:
@@ -41,7 +41,7 @@ jobs:
         - workspace
 
     - save_cache:
-        key: signalfx-trace-java-{{ checksum "signalfx-trace-java.gradle" }}-{{ .Branch }}-{{ .Revision }}
+        key: signalfx-tracing-java-{{ checksum "signalfx-tracing-java.gradle" }}-{{ .Branch }}-{{ .Revision }}
         paths: ~/.gradle
 
 
@@ -185,7 +185,7 @@ jobs:
     - restore_cache:
         # Reset the cache approx every release
         keys:
-        - signalfx-trace-java-version-scan-{{ checksum "signalfx-trace-java.gradle" }}
+        - signalfx-tracing-java-version-scan-{{ checksum "signalfx-tracing-java.gradle" }}
 
     - run:
         name: Verify Muzzle
@@ -195,7 +195,7 @@ jobs:
         command: SKIP_BUILDSCAN="true" GRADLE_OPTS="-Dorg.gradle.jvmargs='-Xmx8G -Xms64M' -Ddatadog.forkedMaxHeapSize=4G -Ddatadog.forkedMinHeapSize=64M" ./gradlew muzzle --parallel --stacktrace --no-daemon
 
     - save_cache:
-        key: signalfx-trace-java-version-scan-{{ checksum "signalfx-trace-java.gradle" }}
+        key: signalfx-tracing-java-version-scan-{{ checksum "signalfx-tracing-java.gradle" }}
         paths: ~/.gradle
 
   publish: &publish
