--- a/dd-smoke-tests/play/play.gradle
+++ b/dd-smoke-tests/play/play.gradle
@@ -1,3 +1,4 @@
+// Modified by SignalFx
 plugins {
   // using this plugin will launch the server in the background and won't block the tests
   id 'com.github.psxpaul.execfork' version '0.1.8'
@@ -87,7 +88,7 @@ tasks.register("startServer", com.github.psxpaul.task.ExecFork) {
   environment = [
     'JAVA_OPTS' :  "-javaagent:${project(':dd-java-agent').tasks.shadowJar.archivePath}"
     + " -Ddd.writer.type=LoggingWriter" + " -Ddd.service.name=java-app"
-      + " -Ddatadog.slf4j.simpleLogger.defaultLogLevel=debug"
+      + " -Dsignalfx.slf4j.simpleLogger.defaultLogLevel=debug"
       + " -Dorg.slf4j.simpleLogger.defaultLogLevel=debug"
       + " -Dconfig.file=${workingDir}/conf/application.conf -Dhttp.port=${playHttpPort}"
       + " -Dhttp.address=127.0.0.1"
