Upgrade to 0.24.0-sfx0

--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -96,7 +96,8 @@ if (!isRoot) {
   }
 
   signing {
-    required = isCI
+    required = !version.endsWith('SNAPSHOT')
+    useGpgCmd()
     sign publishing.publications.mavenJava
   }
 }
