--- a/dd-java-agent/instrumentation/aws-java-sdk-1.11.0/aws-java-sdk-1.11.0.gradle
+++ b/dd-java-agent/instrumentation/aws-java-sdk-1.11.0/aws-java-sdk-1.11.0.gradle
@@ -1,15 +1,9 @@
-// compiling against 1.11.0, but instrumentation should work against 1.10.33 with varying effects,
-// depending on the version's implementation. (i.e. DeleteOptionGroup may have less handlerCounts than
-// expected in 1.11.84. Testing against 1.11.0 instead of 1.10.33 because the RequestHandler class
-// used in testing is abstract in 1.10.33
-// keeping base test version on 1.11.0 because RequestHandler2 is abstract in 1.10.33,
-// therefore keeping base version as 1.11.0 even though the instrumentation probably
-// is able to support up to 1.10.33
+// Modified by SignalFx
 muzzle {
   pass {
     group = "com.amazonaws"
     module = "aws-java-sdk-core"
-    versions = "[1.10.33,)"
+    versions = "[1.11.0,)"
     assertInverse = true
   }
 }
