--- a/dd-java-agent/instrumentation/datastax-cassandra-2.3/datastax-cassandra-2.3.gradle
+++ b/dd-java-agent/instrumentation/datastax-cassandra-2.3/datastax-cassandra-2.3.gradle
@@ -1,3 +1,4 @@
+// Modified by SignalFx
 // Set properties before any plugins get loaded
 ext {
   // Test use Cassandra 3 which requires Java 8. (Currently incompatible with Java 9.)
@@ -37,5 +38,5 @@ dependencies {
   testCompile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '3.2.0'
   testCompile group: 'org.cassandraunit', name: 'cassandra-unit', version: '3.1.3.2'
 
-  latestDepTestCompile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '+'
+  latestDepTestCompile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '3.+'
 }
