--- a/dd-java-agent/instrumentation/instrumentation.gradle
+++ b/dd-java-agent/instrumentation/instrumentation.gradle
@@ -1,3 +1,4 @@
+// Modified by SignalFx
 // this project will run in isolation under the agent's classloader
 buildscript {
   
@@ -58,6 +59,7 @@ configurations {
 }
 
 shadowJar {
+  relocate 'io.netty', 'com.company.app.netty'
   dependencies {
     exclude(project(':dd-java-agent:agent-bootstrap'))
     exclude(project(':dd-trace-api'))
