--- a/dd-java-agent/instrumentation/couchbase-2.0/couchbase-2.0.gradle
+++ b/dd-java-agent/instrumentation/couchbase-2.0/couchbase-2.0.gradle
@@ -1,3 +1,4 @@
+// Modified by SignalFx
 // Set properties before any plugins get loaded
 ext {
   minJavaVersionForTests = JavaVersion.VERSION_1_8
@@ -46,6 +47,6 @@ dependencies {
   testCompile group: 'com.couchbase.client', name: 'java-client', version: '2.5.0'
 
   latestDepTestCompile group: 'org.springframework.data', name: 'spring-data-couchbase', version: '3.+'
-  latestDepTestCompile group: 'com.couchbase.client', name: 'java-client', version: '2.6+'
-  latestDepTestCompile group: 'com.couchbase.client', name: 'encryption', version: '+'
+  latestDepTestCompile group: 'com.couchbase.client', name: 'java-client', version: '2.7.4'
+  latestDepTestCompile group: 'com.couchbase.client', name: 'encryption', version: '1.0.0'
 }
