--- a/settings.gradle
+++ b/settings.gradle
@@ -61,6 +61,7 @@ include ':dd-java-agent:instrumentation:jboss-classloading'
 include ':dd-java-agent:instrumentation:jdbc'
 include ':dd-java-agent:instrumentation:jedis-1.4'
 include ':dd-java-agent:instrumentation:jersey'
+include ':dd-java-agent:instrumentation:jetty-6'
 include ':dd-java-agent:instrumentation:jetty-8'
 include ':dd-java-agent:instrumentation:jms'
 include ':dd-java-agent:instrumentation:jsp-2.3'
