Update jetty-6 instrumentation

--- a/dd-java-agent/instrumentation/jetty-6/jetty-6.gradle
+++ b/dd-java-agent/instrumentation/jetty-6/jetty-6.gradle
@@ -1,3 +1,4 @@
+// Modified by SignalFx
 muzzle {
   pass {
     group = "org.mortbay.jetty"
@@ -25,11 +26,8 @@ testSets {
 }
 
 dependencies {
-  // compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
   compileOnly group: 'javax.servlet', name: 'servlet-api', version: '2.5'
-  // compileOnly group: 'org.mortbay.jetty', name: 'servlet-api', version: '2.5.20110712'
-  // compileOnly group: 'org.mortbay.jetty', name: 'jetty-util', version: '6.1.26'
-  compileOnly group: 'org.mortbay.jetty', name: 'jetty', version: '6.1.26'
+  compileOnly group: 'org.mortbay.jetty', name: 'jetty', version: '6.0.0'
 
   compile project(':dd-trace-ot')
   compile project(':dd-java-agent:agent-tooling')
@@ -42,11 +40,7 @@ dependencies {
   testCompile(project(':dd-java-agent:testing')) {
     exclude group: 'org.mortbay.jetty', module: 'jetty'
   }
-  testCompile group: 'org.mortbay.jetty', name: 'jetty', version: '6.1.26'
-  testCompile group: 'org.mortbay.jetty', name: 'jetty-util', version: '6.1.26'
-  compileOnly group: 'org.mortbay.jetty', name: 'servlet-api', version: '2.5.20110712'
+  testCompile group: 'org.mortbay.jetty', name: 'jetty', version: '6.0.0'
 
   latestDepTestCompile group: 'org.mortbay.jetty', name: 'jetty', version: '+'
-  latestDepTestCompile group: 'org.mortbay.jetty', name: 'jetty-util', version: '+'
-  latestDepTestCompile group: 'org.mortbay.jetty', name: 'servlet-api', version: '+'
 }
