--- a/settings.gradle
+++ b/settings.gradle
@@ -92,6 +92,7 @@ include ':dd-java-agent:instrumentation:tomcat-classloading'
 include ':dd-java-agent:instrumentation:trace-annotation'
 include ':dd-java-agent:instrumentation:twilio'
 include ':dd-java-agent:instrumentation:vertx'
+include ':dd-java-agent:instrumentation:vertx:kotlin-testing'
 
 // benchmark
 include ':dd-java-agent:benchmark'
