--- a/dd-java-agent/instrumentation/jersey/jersey.gradle
+++ b/dd-java-agent/instrumentation/jersey/jersey.gradle
@@ -33,6 +33,10 @@ dependencies {
   testCompile group: 'org.glassfish.jersey.core', name: 'jersey-common', version: '2.1'
   testCompile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.1'
   testCompile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: '2.1'
+  testCompile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.11'
+  testCompile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.2.11'
+  testCompile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.2.11'
+  testCompile group: 'javax.activation', name: 'activation', version: '1.1.1'
 
   latestDepTestCompile group: 'org.glassfish.jersey.core', name: 'jersey-common', version: '2.+'
   latestDepTestCompile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.+'
