--- a/signalfx-java-tracing.gradle
+++ b/signalfx-java-tracing.gradle
@@ -16,7 +16,8 @@ def isCI = System.getenv("CI") != null
 
 allprojects {
   group = 'com.signalfx.public'
-  version = '0.28.0-sfx2'
+  // Don't forget to update TRACING_VERSION_VALUE in dd-trace-api/src/main/java/datadog/trace/api/Config.java
+  version = '0.28.0-sfx3'
 
   if (isCI) {
     buildDir = "${rootDir}/workspace/${projectDir.path.replace(rootDir.path, '')}/build/"
