--- a/dd-java-agent/instrumentation/aws-java-sdk-1.11.0/aws-java-sdk-1.11.0.gradle
+++ b/dd-java-agent/instrumentation/aws-java-sdk-1.11.0/aws-java-sdk-1.11.0.gradle
@@ -3,7 +3,7 @@ muzzle {
   pass {
     group = "com.amazonaws"
     module = "aws-java-sdk-core"
-    versions = "[1.11.0,)"
+    versions = "[1.10.33,)" // though these pass, we aren't advertising support for anything <1.11.0
     assertInverse = true
   }
 }
